Further fixes for overflowing tables Also improved rendering of the item's table for the items with an expired checkup

--- a/src/app/item/components/item-list/item-list.component.scss
+++ b/src/app/item/components/item-list/item-list.component.scss
@@ -22,18 +22,4 @@ thead {
     thead tr:not(:first-child) {
       display: none;
     }
-    td:not(:last-child) {
-      border-bottom: 0;
-    }
-    th{
-      border-bottom: 2px solid rgba(0, 0, 0, .1);
-    }
   }
-
-td:not(:last-child) {
-  border-bottom: 0;
-}
-
-th:is(:last-child){
-  border-bottom: 2px solid rgba(0, 0, 0, .1);
-}
